[[:commons:COM:Duplicate|Duplicate]]: [[File:Flag of Vytegorsky rayon (Vologda oblast).gif]] → [[File:Flag of Vytegorsky rayon (Vologda oblast).png]] Exact or scaled-down duplicate: [[:commons::File:Flag of Vytegorsky rayon (Vologda oblast).png]]

--- a/Vitegran_rajon.mw
+++ b/Vitegran_rajon.mw
@@ -1,7 +1,7 @@
 {{Rajon
 | Nimi          = Vitegran rajon
 | Znam          = Coat of Arms of Vytegorsky rayon (Vologda oblast).gif
-| Flag          = Flag of Vytegorsky rayon (Vologda oblast).gif
+| Flag          = Flag of Vytegorsky rayon (Vologda oblast).png
 | Znam text     = 
 | Flag text     = 
 | Valdkund      = Venäma
