*Empty MediaWiki Message*

--- a/Leningradan_agj.mw
+++ b/Leningradan_agj.mw
@@ -40,6 +40,9 @@ Gubernator — [[Aleksandr Drozdenko|Aleksandr Jur'jevič Drozdenko]].
 == Ižanduz ==
 
 <br/>
+
+{{Rajonad Leningradan agjas}}
+
 {{Venälaižen Federacijan subjektad}}
 
 {{DEFAULTSORT:Leningradan agj}}
