*Empty MediaWiki Message*

--- a/Pöudon_rajon.mw
+++ b/Pöudon_rajon.mw
@@ -23,9 +23,9 @@
 == Eläjad ==
 
 == Ižanduz ==
-{{stub}}
 
-{{DEFAULTSORT:Pöudon rajon}}
+{{Vepsän küläd Leningradan agjan Pöudon rajonas}}
 {{Rajonad Leningradan agjas}}
+{{stub}}
 
 [[Kategorii:Pöudon rajon| ]]
