--- a/Sent-Ekzüperi_Antuan_de.mw
+++ b/Sent-Ekzüperi_Antuan_de.mw
@@ -1,5 +1,5 @@
 [[Fail:Antoine de Saint-Exupéry.jpg|thumb|right|265px|Antuan de Sent-Ekzüperi vl [[1942]]]]
-'''Antuan Mari ŽanBatist Rože de Sent-Ekzüperi''' ([[Francijan kel'|franc.]] ''Antoine Marie Jean-Baptiste Roger de Saint-Exupéry''; [[29. kezaku]] [[1900]], [[Lion]], [[Francii]] — [[31. heinku]] [[1944]]) oli [[Francii|francijalaine]] kirjutai, runonkirjutai i professionaline [[lendai]].
+'''Antuan Mari Žan-Batist Rože de Sent-Ekzüperi''' ([[Francijan kel'|franc.]] ''Antoine Marie Jean-Baptiste Roger de Saint-Exupéry''; [[29. kezaku]] [[1900]], [[Lion]], [[Francii]] — [[31. heinku]] [[1944]]) oli [[Francii|francijalaine]] kirjutai, runonkirjutai i professionaline [[lendai]].
 
 {{stub}}
 
