--- a/Vepsän_zavet.mw
+++ b/Vepsän_zavet.mw
@@ -1,3 +1,30 @@
+{{Fil'm
+ | Nimi         = «Vepsän zavet»
+ | Kuva         = 
+ | Kuvan ümbrikirjutand    = «Vepsän zavetan» fil'mankor'
+ | Originaline nimi = «Вепсский завет»
+ | Voz'         = [[2009]]
+ | Valdkund     = [[Venäma]]
+ | Kel'         = [[venäkel'|venän]]
+ | Žanr         = [[dokumentaline fil'm|dokumentaline]]
+ | Režissör     = Aleksandr Tütrümov, A. Junisova
+ | Scenarii     = Vladimir Studennikov, Natal'ja Loskutova
+ | Kompozitor   = 
+ | Aktörad      = 
+ | Prodüser     = Aleksandr Tütrümov
+ | Kompanii     = 
+ | Studii       = ATK-Studio
+ | Piduz        = 52 minutad
+ | Montaž       = 
+ | Operator     = Igor' Kačorovskii
+ | Arvlahjad    = «Sibirin kuldaline kedrveza 2009» („Režissöran parahim rad“, „Operatoran parahim rad“, „Muzikankirjutajan parahim rad“)
+ | Büdžet       = tundmatoi
+ | Salhed       =  ''[[direct-to-video]]''
+ | Edeline fil'm    = 
+ | Jäl'ghine fil'm  = 
+ | Sait         = 
+ | imdb_id      = 
+}}
 '''«Vepsän zavet»''' ([[Venäkel'|ven.]] ''Вепсский завет'') om voden [[2009]] dokumentaline fil'm [[vepsläižed|vepsän rahvahan]] istorijan da kul'turan polhe.
 
 Erazvuččiš epizodoiš vändab vepsläine runokirjutai [[Abramov Nikolai|Nikolai Abramov]]. Fil'mas mugažo kuluse [[Petroskoi|petroskoilaižen]] «[[Noid (grupp)|Noid]]»-folkgruppan pajod.
