пока общую категорию "диско", а там посмотрим, как откатегоризовать лучше

--- a/Aleph.mw
+++ b/Aleph.mw
@@ -38,7 +38,7 @@ Se oli olmas vodelpäi [[1985]] da vodehesai [[1991]]. Mülükundas oli [[Deiv R
 * ''Take My Life'' (1990)
 {{stub}}
 
-[[Kategorii:Diskogruppad]]
+[[Kategorii:Disko]]
 [[Kategorii:Sintipopgruppad]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
 [[Kategorii:Italijan muzikgruppad]]
