--- a/Joy.mw
+++ b/Joy.mw
@@ -35,8 +35,9 @@ Kaikiš tetabižiš gruppan pajod — «Touch By Touch» da «Valerie».
 
 == Irdkosketused ==
 * [http://www.joy.or.at/ Oficialine sait]
-
 {{stub}}
+
+[[Kategorii:Disko]]
 [[Kategorii:Sintipopgruppad]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
 [[Kategorii:Avstrijan muzikgruppad]]
