--- a/Blue_System.mw
+++ b/Blue_System.mw
@@ -65,6 +65,7 @@ Mülükund oli ''[[Bolen Diter|Diter Bolen]]'', ''[[Köler Rol'f|Rol'f Köler]]'
 {{stub}}
 {{Modern Talking}}
 
+[[Kategorii:Disko]]
 [[Kategorii:Saksanman muzikgruppad]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
 [[Kategorii:Sintipopgruppad]]
