*Empty MediaWiki Message*

--- a/Bad_Boys_Blue.mw
+++ b/Bad_Boys_Blue.mw
@@ -24,6 +24,7 @@ Gruppan mülükund oli lujas toižetui; üks'jäine nügüdläine ühtnii om ''D
 * [http://www.badboysblue.eu/ Oficialine sait]
 {{stub}}
 
+[[Kategorii:Disko]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
 [[Kategorii:Sintipopgruppad]]
 [[Kategorii:Evropopgruppad]]
