*Empty MediaWiki Message*

--- a/Miraž_(grupp).mw
+++ b/Miraž_(grupp).mw
@@ -26,6 +26,6 @@
 * [http://mirage-vocal.ru/ Oficialine sait]
 {{stub}}
 
-[[Kategorii:Diskogruppad]]
+[[Kategorii:Disko]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
 [[Kategorii:Venäman muzikgruppad]]
