*Empty MediaWiki Message*

--- a/Miraž_(grupp).mw
+++ b/Miraž_(grupp).mw
@@ -27,5 +27,6 @@
 {{stub}}
 
 [[Kategorii:Disko]]
+[[Kategorii:Sintipopgruppad]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
 [[Kategorii:Venäman muzikgruppad]]
