*Empty MediaWiki Message*

--- a/Modern_Talking.mw
+++ b/Modern_Talking.mw
@@ -61,6 +61,7 @@
 {{stub}}
 {{Modern Talking}}
 
+[[Kategorii:Disko]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
 [[Kategorii:Sintipopgruppad]]
 [[Kategorii:Modern Talking|*]]
