*Empty MediaWiki Message*

--- a/The_Weather_Girls.mw
+++ b/The_Weather_Girls.mw
@@ -34,6 +34,6 @@ Kaikiš tetabamb gruppan pajo — «[[It's Raining Men]]».
 * ''Can You Feel It'' (1993)
 {{stub}}
 
-[[Kategorii:Diskogruppad|w]]
-[[Kategorii:Muzikgruppad kirjamišton mödhe|w]]
-[[Kategorii:AÜV:oiden muzikgruppad|w‎]]
+[[Kategorii:Disko]]
+[[Kategorii:Muzikgruppad kirjamišton mödhe]]
+[[Kategorii:AÜV:oiden muzikgruppad]]
