*Empty MediaWiki Message*

--- a/Systems_in_Blue.mw
+++ b/Systems_in_Blue.mw
@@ -46,6 +46,7 @@ Mülükund om ''[[Šol'c Mihael'|Mihael' Šol'c]]'' da ''[[Vedeke Detlef|Detlef 
 {{stub}}
 {{Modern Talking}}
 
+[[Kategorii:Disko]]
 [[Kategorii:Saksanman muzikgruppad]]
 [[Kategorii:Sintipopgruppad]]
 [[Kategorii:Evrodensgruppad]]
