--- a/Systems_in_Blue.mw
+++ b/Systems_in_Blue.mw
@@ -31,7 +31,7 @@ Mülükund om ''[[Šol'c Mihael'|Mihael' Šol'c]]'' da ''[[Vedeke Detlef|Detlef 
 * ''[[Give A Little Sweet Love]] (feat. Mark Ashley)'' (2006)
 * ''[[Voodoo Queen]]'' (2007)
 * ''[[Dr. No]]'' (2008)
-* ''[[Heaven and Hell]]'' (2009)
+* ''[[Heaven and Hell (Systems in Blue:n pajo)|Heaven and Hell]]'' (2009)
 
 === Kompiläcijad ===
 * ''[[Heaven & Hell — The Mixes]]'' (2009)
