*Empty MediaWiki Message*

--- a/Prištin.mw
+++ b/Prištin.mw
@@ -1,13 +1,18 @@
-{| class="infobox bordered" align=right cellpadding=4 cellspacing=0 width=275 style="clear:right; margin: 0 0 1em 1em; background: #f9f9f9;  font-size: 95%;"
-|-
-|colspan=2 align=center bgcolor="#BFDFFF"|<big>'''Prištin'''</big>
-|-
-| align="center" | [[Fail:COA Priština.jpg|100px|Prištinan lidnanznam]]
-|-
-|Eläjiden lugu|| 198 112 rist.
-|-
-|Pind|| 857 km²
-|}
+{{Eländpunkt
+ | Nimi = Prištin<br />Приштина / Priština<br />Prishtinë
+ | Lidnanznam = COA Priština.jpg
+ | Flag = 
+ | Lidnanznam text = Prištin lidnanznam
+ | Flag text = 
+ | Valdkund = Serbii
+ | Eläjiden lugu = 198,112
+ | Voz' = 2011
+ | Pind = 857
+ | Fail = Prishtina perspektivë nga Radio Kosova 1.jpg
+ | Pämez' = Isa Mustafa
+ | Telefonkod = +381-38
+ | Aigvö = [[UTC]]+2
+}}
 '''Prištin''' ([[Serbijan kel'|serb.]] ''Приштина / Priština'', [[Albanijan kel'|alb.]] ''Prishtinë'') om lidn [[Serbii|Serbijas]], [[Kosov i Metohii]]- avtonomižes randas.
 
 [[Fail:Prishtina perspektivë nga Radio Kosova 5.jpg||thumb|left|350px|Prištin]]
