если это фото сейчас вообще актуально

--- a/Prištin.mw
+++ b/Prištin.mw
@@ -15,7 +15,7 @@
 }}
 '''Prištin''' ([[Serbijan kel'|serb.]] ''Приштина / Priština'', [[Albanijan kel'|alb.]] ''Prishtinë'') om lidn [[Serbii|Serbijas]], [[Kosov i Metohii]]- avtonomižes randas.
 
-[[Fail:Prishtina perspektivë nga Radio Kosova 5.jpg||thumb|left|350px|Prištin]]
+[[Fail:Pristina from 8th floor of Hotel Sirius - 19.JPG|thumb|left|250px|Prištin]]
 
 {{stub}}
 
