*Empty MediaWiki Message*

--- a/Ropča_Andrei.mw
+++ b/Ropča_Andrei.mw
@@ -1,3 +1,5 @@
+[[File:Андрей Ропча.jpg|250 px|right|thumb|Andrei Ropča, 2011]]
+
 '''Andrei Štefan Ropča''' ([[romanijan kel'|rom.]]: ''Andrei Ştefan Ropcea''; sünd. [[23. semendku]] [[1983]], [[Pitešti]], [[Romanii]]) om romanijalaine pajatai, [[MoRandi]]-kollektivan ühtnii.
 
 == Solosinglad ==
