*Empty MediaWiki Message*

--- a/Pankatalanizm.mw
+++ b/Pankatalanizm.mw
@@ -1,4 +1,4 @@
-[[Fail:Mural Països Catalans.JPG|thumb|right|250px|Graffiti [[Katalonijan kel'|katalonijan kelen]] i [[Katalonii|man]] ühtmuden tügehe]]
+[[Fail:Mural Països Catalans.JPG|thumb|right|250px|Graffiti [[Katalonijan kel'|katalonijan kelen]] i [[Katalonii|man]] ühtmuden tügeks]]
 '''Pankatalanizm''' ([[Katalonijan kel'|kat.]] ''Pancatalanisme'') om kul'turine i politine likumine, kudamban aluses venub [[katalonijalaižed|katalonijan rahvahan]] politižen ühtmuden idei etnižen, kul'turižen da keližen identižusen alusel.
 
 {{stub}}
