*Empty MediaWiki Message*

--- a/30_(lugu).mw
+++ b/30_(lugu).mw
@@ -1,4 +1,4 @@
-'''30''' ('''koumekümne''') om lugusana [[29 (lugu)|29]] da [[31 (lugu)|31]] keskes.
+'''30''' ('''koumekümne''') om lugu [[29 (lugu)|29]] da [[31 (lugu)|31]] keskes.
 
 == Lugun ičendad ==
 * Nece lugu om palakaz.
