--- a/31_(lugu).mw
+++ b/31_(lugu).mw
@@ -1,7 +1,7 @@
-'''31''' ('''koumekümne üks' ''') om lugusana [[30 (lugu)|30]] da [[32 (lugu)|32]] keskes.
+'''31''' ('''koumekümne üks'''') om lugusana [[30 (lugu)|30]] da [[32 (lugu)|32]] keskes.
 
 == Lugun ičendad ==
-* Nece lugu om palakaz.
+* Nece lugu om jagamatoi.
 {{stub}}
 
 [[Kategorii:Lugusanad]]
