*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -1,7 +1,7 @@
 '''Mad'jaranmas oma 346 lidnad''':
 {| class="wikitable"
 |-
-! '''Lidnad nimi'''
+! '''Lidnas nimi'''
 ! '''Provincii'''
 ! '''Eläjiden lugu'''
 |-
