*Empty MediaWiki Message*

--- a/Vepsän_zavet.mw
+++ b/Vepsän_zavet.mw
@@ -29,7 +29,7 @@
 
 Erazvuččiš epizodoiš vändab vepsläine runokirjutai [[Abramov Nikolai|Nikolai Abramov]]. Fil'mas mugažo kuluse [[Petroskoi|petroskoilaižen]] «[[Noid (grupp)|Noid]]»-folkgruppan pajod.
 
-Režissörad — [[Studennikov Viktor|Viktor Studennikov]] i [[Aleksandr Tütrümov|Aleksandr Tütrümov]].
+Režissörad — [[Studennikov Viktor|Viktor Studennikov]] i [[Tütrümov Aleksandr|Aleksandr Tütrümov]].
 
 == Irdkosketused ==
 * [http://finugor.ru/node/11924 «Vepsän zavet»:an polhe finugor.ru-saital]
