--- a/Päč.mw
+++ b/Päč.mw
@@ -71,6 +71,8 @@ Päčid ed vargasta.
 <blockquote>
 Čep' čep'he i lop päčhe (paličad seinäspäi päčihesai).
 
+Lehm seižub tanhal, sar’ved irdal (päč lämptäb).
+
 Must härgaine om lujas joll’akaz, hot’ äjak vet anda, ka kaiken job (küuduk).
 </blockquote>
 
