У Бекешчабы š и č пришлось отделять апострофом, чтобы не вышел другой звук.

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -5,83 +5,83 @@
 ! '''Provincii'''
 ! '''Eläjiden lugu'''
 |-
-| '''[[Aba]]'''
+| '''[[Ab (lidn, Mad'jaranma)|Ab]]'''
 | [[Közép-Dunántúli Provincii]]
 | 4619
 |-
-| '''[[Abádszalók]]'''
+| '''[[Abadsalok]]'''
 | [[Észak-Alföldi Provincii]] 
 | 3922
 |-
-| '''[[Abaújszántó]]'''
+| '''[[Abauisanto]]'''
 | [[Észak-Magyarorszáági Provincii]]
 | 3088
 |-
-| '''[[Abony]]'''
+| '''[[Abon']]'''
 | [[Közép-Magyarországi Provincii]]
 | 14876
 |-
-| '''[[Ács]]'''
+| '''[[Ač (lidn)|Ač]]'''
 | [[Közép-Dunántúli Provincii]]
 | 6965
 |-
-| '''[[Adony]]'''
+| '''[[Adon']]'''
 | [[Közép-Dunántúli Provincii]]
 | 3912
 |-
-| '''[[Ajak]]'''
+| '''[[Ajäk]]'''
 | [[Észak-Alföldi Provincii]]
 | 3528
 |-
-| '''[[Ajka]]'''
+| '''[[Aik]]'''
 | [[Közép-Dunántúli Provincii]]
 | 29058
 |-
-| '''[[Albertirsa]]'''
+| '''[[Al'bertirš]]'''
 | [[Közép-Magyarországi Provincii]]
 | 12410
 |-
-| '''[[Alsózsolca]]'''
+| '''[[Al'šožol'c]]'''
 | [[Észak-Magyarországi Provincii]]
 | 5937
 |-
-| '''[[Aszód]]'''
+| '''[[Asod]]'''
 | [[Közép-Magyarországi Provincii]]
 | 6414
 |-
-| '''[[Bábolna]]'''
+| '''[[Babol'n]]'''
 | [[Közép-Dunántúli Provincii]]
 | 3654
 |-
-| '''[[Bácsalmás]]'''
+| '''[[Bačal'maš]]'''
 | [[Dél-Alföldi Provincii]]
 | 6697
 |-
-| '''[[Badacsonytomaj]]'''
+| '''[[Badačon'tomai]]'''
 | [[Közép-Dunántúli Provincii]]
 | 2080
 |-
-| '''[[Baja]]'''
+| '''[[Bai]]'''
 | [[Dél-Alföldi Provincii]]
 | 37330
 |-
-| '''[[Baktalórántháza]]'''
+| '''[[Baktaloranthaz]]'''
 | [[Észak-Alföldi Provincii]]
 | 4302
 |-
-| '''[[Balassagyarmat]]'''
+| '''[[Balaššad'jarmat]]'''
 | [[Észak-Magyarországi Provincii]]
 | 16133
 |-
-| '''[[Balatonalmádi]]'''
+| '''[[Balatonal'madi]]'''
 | [[Közép-Dunántúli Provincii]]
 | 9167
 |-
-| '''[[Balatonboglár]]'''
+| '''[[Balatonboglar]]'''
 | [[Dél-Dunántúli Provincii]]
 | 5932
 |-
-| '''[[Balatonföldvár]]'''
+| '''[[Balatonfel'dvar]]'''
 | [[Dél-Dunántúli Provincii]]
 | 2064
 |-
@@ -89,11 +89,11 @@
 | [[Közép-Dunántúli Provincii]]
 | 13532
 |-
-| '''[[Balatonfűzfő]]'''
+| '''[[Balatonfüzfö]]'''
 | [[Közép-Dunántúli Provincii]]
 | 4299
 |-
-| '''[[Balatonkenese]]'''
+| '''[[Balatonkeneše]]'''
 | [[Közép-Dunántúli Provincii]]
 | 3195
 |-
@@ -101,39 +101,39 @@
 | [[Dél-Dunántúli Provincii]]
 | 4735
 |-
-| '''[[Balkány]]'''
+| '''[[Bal'kan']]'''
 | [[Észak-Alföldi Provincii]]
 | 6215
 |-
-| '''[[Balmazújváros]]'''
+| '''[[Bal'mazuivaroš]]'''
 | [[Észak-Alföldi Provincii]]
 | 17354
 |-
-| '''[[Barcs]]'''
+| '''[[Barč (lidn)|Barč]]'''
 | [[Dél-Dunántúli Provincii]]
 | 11378
 |-
-| '''[[Bátaszék]]'''
+| '''[[Batasek]]'''
 | [[Dél-Dunántúli Provincii]]
 | 6388
 |-
-| '''[[Bátonyterenye]]'''
+| '''[[Baton'teren'je]]'''
 | [[Észak-Magyarországi Provincii]]
 | 12604
 |-
-| '''[[Battonya]]'''
+| '''[[Batton'j]]'''
 | [[Dél-Alföldi Provincii]]
 | 5565
 |-
-| '''[[Békés]]'''
+| '''[[Bekeš (lidn)|Bekeš]]'''
 | [[Dél-Alföldi Provincii]]
 | 19763
 |-
-| '''[[Békéscsaba]]'''
+| '''[[Bekeš'čab]]'''
 | [[Dél-Alföldi Provincii]]
 | 63752
 |-
-| '''[[Bélapátfalva]]'''
+| '''[[Belapatfalv]]'''
 | [[Észak-Magyarországi Provincii]]
 | 2996
 |-
@@ -141,55 +141,55 @@
 | [[Nyugat-Magyarországi Provincii]]
 | 2553
 |-
-| '''[[Berettyóújfalu]]'''
+| '''[[Berettöuifalu]]'''
 | [[Észak-Alföldi Provincii]]
 | 15167
 |-
-| '''[[Berhida]]'''
+| '''[[Berhid]]'''
 | [[Közép-Dunántúli Provincii]]
 | 5967
 |-
-| '''[[Besenyszög]]'''
+| '''[[Bešen'söd]]'''
 | [[Észak-Alföldi Provincii]]
 | 3372
 |-
-| '''[[Biatorbágy]]'''
+| '''[[Biatorbad']]'''
 | [[Közép-Magyarországi Provincii]]
 | 12805
 |-
-| '''[[Bicske]]'''
+| '''[[Bičke]]'''
 | [[Közép-Dunántúli Provincii]]
 | 11642
 |-
-| '''[[Biharkeresztes]]'''
+| '''[[Biharkeresteš]]'''
 | [[Észak-Alföldi Provincii]]
 | 3688
 |-
-| '''[[Bodajk]]'''
+| '''[[Bodaik]]'''
 | [[Közép-Dunántúli Provincii]]
 | 4051
 |-
-| '''[[Bóly]]'''
+| '''[[Boi (lidn, Mad'jaranma)|Boi]]'''
 | [[Dél-Dunántúli Provincii]]
 | 3996
 |-
-| '''[[Bonyhád]]'''
+| '''[[Bon'had]]'''
 | [[Dél-Dunántúli Provincii]]
 | 13741
 |-
-| '''[[Borsodnádasd]]'''
+| '''[[Boršodnadašt]]'''
 | [[Észak-Magyarországi Provincii]]
 | 3007
 |-
-| '''[[Budakalász]]'''
+| '''[[Budakalas]]'''
 | [[Közép-Magyarországi Provincii]]
 | 10510
 |-
-| '''[[Budakeszi]]'''
+| '''[[Budakesi]]'''
 | [[Közép-Magyarországi Provincii]]
 | 14507
 |-
-| '''[[Budaörs]]'''
+| '''[[Budajorš]]'''
 | [[Közép-Magyarországi Provincii]]
 | 29605
 |-
@@ -201,47 +201,47 @@
 | [[Nyugat-Magyarországi Provincii]]
 | 3493
 |-
-| '''[[Cegléd]]'''
+| '''[[Cegled]]'''
 | [[Közép-Magyarországi Provincii]]
 | 37778
 |-
-| '''[[Celldömölk]]'''
+| '''[[Cell'dömöl'k]]'''
 | [[Közép-Dunántúli Provincii]]
 | 10786
 |-
-| '''[[Cigánd]]'''
+| '''[[Cigand]]'''
 | [[Észak-Magyarországi Provincii]]
 | 2682
 |-
-| '''[[Csákvár]]'''
+| '''[[Čakvar]]'''
 | [[Közép-Dunántúli Provincii]]
 | 5221
 |-
-| '''[[Csanádpalota]]'''
+| '''[[Čanadpalot]]'''
 | [[Dél-Alföldi Provincii]]
 | 2968
 |-
-| '''[[Csenger]]'''
+| '''[[Čenger]]'''
 | [[Észak-Alföldi Provincii]]
 | 4730
 |-
-| '''[[Csepreg]]'''
+| '''[[Čepreg]]'''
 | [[Nyugat-Magyarországi Provincii]]
 | 3384
 |-
-| '''[[Csongrád]]'''
+| '''[[Čongrad (lidn)|Čongrad]]'''
 | [[Dél-Alföldi Provincii]]
 | 16846
 |-
-| '''[[Csorna]]'''
+| '''[[Čorn]]'''
 | [[Nyugat-Magyarországi Provincii]]
 | 10649
 |-
-| '''[[Csorvás]]'''
+| '''[[Čorvaš]]'''
 | [[Dél-Alföldi Provincii]]
 | 4981
 |-
-| '''[[Csurgó]]'''
+| '''[[Čurgo]]'''
 | [[Dél-Dunántúli Provincii]]
 | 5186
 |}
