*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -54,7 +54,7 @@
 | 3654
 |-
 | '''[[Bačal'maš]]'''
-| [[Dél-Alföldi Provincii]]
+| [[Suvidunajantagaine rand]]
 | 6697
 |-
 | '''[[Badačon'tomai]]'''
@@ -62,7 +62,7 @@
 | 2080
 |-
 | '''[[Bai]]'''
-| [[Dél-Alföldi Provincii]]
+| [[Suvidunajantagaine rand]]
 | 37330
 |-
 | '''[[Baktaloranthaz]]'''
@@ -78,11 +78,11 @@
 | 9167
 |-
 | '''[[Balatonboglar]]'''
-| [[Dél-Dunántúli Provincii]]
+| [[Suvidunajantagaine rand]]
 | 5932
 |-
 | '''[[Balatonfel'dvar]]'''
-| [[Dél-Dunántúli Provincii]]
+| [[Suvidunajantagaine rand]]
 | 2064
 |-
 | '''[[Balatonfüred]]'''
@@ -110,11 +110,11 @@
 | 17354
 |-
 | '''[[Barč (lidn)|Barč]]'''
-| [[Dél-Dunántúli Provincii]]
+| [[Suvidunajantagaine rand]]
 | 11378
 |-
 | '''[[Batasek]]'''
-| [[Dél-Dunántúli Provincii]]
+| [[Suvidunajantagaine rand]]
 | 6388
 |-
 | '''[[Baton'teren'je]]'''
@@ -122,15 +122,15 @@
 | 12604
 |-
 | '''[[Batton'j]]'''
-| [[Dél-Alföldi Provincii]]
+| [[Suvidunajantagaine rand]]
 | 5565
 |-
 | '''[[Bekeš (lidn)|Bekeš]]'''
-| [[Dél-Alföldi Provincii]]
+| [[Suvidunajantagaine rand]]
 | 19763
 |-
 | '''[[Bekeš'čab]]'''
-| [[Dél-Alföldi Provincii]]
+| [[Suvidunajantagaine rand]]
 | 63752
 |-
 | '''[[Belapatfalv]]'''
@@ -170,11 +170,11 @@
 | 4051
 |-
 | '''[[Boi (lidn, Mad'jaranma)|Boi]]'''
-| [[Dél-Dunántúli Provincii]]
+| [[Suvidunajantagaine rand]]
 | 3996
 |-
 | '''[[Bon'had]]'''
-| [[Dél-Dunántúli Provincii]]
+| [[Suvidunajantagaine rand]]
 | 13741
 |-
 | '''[[Boršodnadašt]]'''
@@ -194,8 +194,8 @@
 | 29605
 |-
 | '''[[Budapešt]]'''
-| [[Pälidn]]
-| 1740041
+| '''[[Pälidn]]'''
+| '''1740041'''
 |-
 | '''[[Bük]]'''
 | [[Nyugat-Magyarországi Provincii]]
@@ -218,7 +218,7 @@
 | 5221
 |-
 | '''[[Čanadpalot]]'''
-| [[Dél-Alföldi Provincii]]
+| [[Suvidunajantagaine rand]]
 | 2968
 |-
 | '''[[Čenger]]'''
@@ -230,7 +230,7 @@
 | 3384
 |-
 | '''[[Čongrad (lidn)|Čongrad]]'''
-| [[Dél-Alföldi Provincii]]
+| [[Suvidunajantagaine rand]]
 | 16846
 |-
 | '''[[Čorn]]'''
@@ -238,11 +238,11 @@
 | 10649
 |-
 | '''[[Čorvaš]]'''
-| [[Dél-Alföldi Provincii]]
+| [[Suvidunajantagaine rand]]
 | 4981
 |-
 | '''[[Čurgo]]'''
-| [[Dél-Dunántúli Provincii]]
+| [[Suvidunajantagaine rand]]
 | 5186
 |}
 
