--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -138,7 +138,7 @@
 | 2996
 |-
 | '''[[Beled]]'''
-| [[Nyugat-Magyarországi Provincii]]
+| [[Päivlaskmdunajantagaine rand]]
 | 2553
 |-
 | '''[[Berettöuifalu]]'''
@@ -198,7 +198,7 @@
 | '''1740041'''
 |-
 | '''[[Bük]]'''
-| [[Nyugat-Magyarországi Provincii]]
+| [[Päivlaskmdunajantagaine rand]]
 | 3493
 |-
 | '''[[Cegled]]'''
@@ -226,7 +226,7 @@
 | 4730
 |-
 | '''[[Čepreg]]'''
-| [[Nyugat-Magyarországi Provincii]]
+| [[Päivlaskmdunajantagaine rand]]
 | 3384
 |-
 | '''[[Čongrad (lidn)|Čongrad]]'''
@@ -234,7 +234,7 @@
 | 16846
 |-
 | '''[[Čorn]]'''
-| [[Nyugat-Magyarországi Provincii]]
+| [[Päivlaskmdunajantagaine rand]]
 | 10649
 |-
 | '''[[Čorvaš]]'''
