*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -98,7 +98,7 @@
 | 3195
 |-
 | '''[[Balatonlelle]]'''
-| [[Dél-Dunántúli Provincii]]
+| [[Suvidunajantagaine rand]]
 | 4735
 |-
 | '''[[Bal'kan']]'''
