--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -6,7 +6,7 @@
 ! '''Eläjiden lugu'''
 |-
 | '''[[Ab (lidn, Mad'jaranma)|Ab]]'''
-| [[Közép-Dunántúli Provincii]]
+| [[Keskuzdunajantagaine rand]]
 | 4619
 |-
 | '''[[Abadsalok]]'''
@@ -22,11 +22,11 @@
 | 14876
 |-
 | '''[[Ač (lidn)|Ač]]'''
-| [[Közép-Dunántúli Provincii]]
+| [[Keskuzdunajantagaine rand]]
 | 6965
 |-
 | '''[[Adon']]'''
-| [[Közép-Dunántúli Provincii]]
+| [[Keskuzdunajantagaine rand]]
 | 3912
 |-
 | '''[[Ajäk]]'''
@@ -34,7 +34,7 @@
 | 3528
 |-
 | '''[[Aik]]'''
-| [[Közép-Dunántúli Provincii]]
+| [[Keskuzdunajantagaine rand]]
 | 29058
 |-
 | '''[[Al'bertirš]]'''
@@ -50,7 +50,7 @@
 | 6414
 |-
 | '''[[Babol'n]]'''
-| [[Közép-Dunántúli Provincii]]
+| [[Keskuzdunajantagaine rand]]
 | 3654
 |-
 | '''[[Bačal'maš]]'''
@@ -58,7 +58,7 @@
 | 6697
 |-
 | '''[[Badačon'tomai]]'''
-| [[Közép-Dunántúli Provincii]]
+| [[Keskuzdunajantagaine rand]]
 | 2080
 |-
 | '''[[Bai]]'''
@@ -74,7 +74,7 @@
 | 16133
 |-
 | '''[[Balatonal'madi]]'''
-| [[Közép-Dunántúli Provincii]]
+| [[Keskuzdunajantagaine rand]]
 | 9167
 |-
 | '''[[Balatonboglar]]'''
@@ -86,15 +86,15 @@
 | 2064
 |-
 | '''[[Balatonfüred]]'''
-| [[Közép-Dunántúli Provincii]]
+| [[Keskuzdunajantagaine rand]]
 | 13532
 |-
 | '''[[Balatonfüzfö]]'''
-| [[Közép-Dunántúli Provincii]]
+| [[Keskuzdunajantagaine rand]]
 | 4299
 |-
 | '''[[Balatonkeneše]]'''
-| [[Közép-Dunántúli Provincii]]
+| [[Keskuzdunajantagaine rand]]
 | 3195
 |-
 | '''[[Balatonlelle]]'''
@@ -146,7 +146,7 @@
 | 15167
 |-
 | '''[[Berhid]]'''
-| [[Közép-Dunántúli Provincii]]
+| [[Keskuzdunajantagaine rand]]
 | 5967
 |-
 | '''[[Bešen'söd]]'''
@@ -158,7 +158,7 @@
 | 12805
 |-
 | '''[[Bičke]]'''
-| [[Közép-Dunántúli Provincii]]
+| [[Keskuzdunajantagaine rand]]
 | 11642
 |-
 | '''[[Biharkeresteš]]'''
@@ -166,7 +166,7 @@
 | 3688
 |-
 | '''[[Bodaik]]'''
-| [[Közép-Dunántúli Provincii]]
+| [[Keskuzdunajantagaine rand]]
 | 4051
 |-
 | '''[[Boi (lidn, Mad'jaranma)|Boi]]'''
@@ -206,7 +206,7 @@
 | 37778
 |-
 | '''[[Cell'dömöl'k]]'''
-| [[Közép-Dunántúli Provincii]]
+| [[Keskuzdunajantagaine rand]]
 | 10786
 |-
 | '''[[Cigand]]'''
@@ -214,7 +214,7 @@
 | 2682
 |-
 | '''[[Čakvar]]'''
-| [[Közép-Dunántúli Provincii]]
+| [[Keskuzdunajantagaine rand]]
 | 5221
 |-
 | '''[[Čanadpalot]]'''
