*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -18,7 +18,7 @@
 | 3088
 |-
 | '''[[Abon']]'''
-| [[Közép-Magyarországi Provincii]]
+| [[Keskuzmad'jaranma]]
 | 14876
 |-
 | '''[[Ač (lidn)|Ač]]'''
@@ -38,7 +38,7 @@
 | 29058
 |-
 | '''[[Al'bertirš]]'''
-| [[Közép-Magyarországi Provincii]]
+| [[Keskuzmad'jaranma]]
 | 12410
 |-
 | '''[[Al'šožol'c]]'''
@@ -46,7 +46,7 @@
 | 5937
 |-
 | '''[[Asod]]'''
-| [[Közép-Magyarországi Provincii]]
+| [[Keskuzmad'jaranma]]
 | 6414
 |-
 | '''[[Babol'n]]'''
@@ -154,7 +154,7 @@
 | 3372
 |-
 | '''[[Biatorbad']]'''
-| [[Közép-Magyarországi Provincii]]
+| [[Keskuzmad'jaranma]]
 | 12805
 |-
 | '''[[Bičke]]'''
@@ -182,19 +182,19 @@
 | 3007
 |-
 | '''[[Budakalas]]'''
-| [[Közép-Magyarországi Provincii]]
+| [[Keskuzmad'jaranma]]
 | 10510
 |-
 | '''[[Budakesi]]'''
-| [[Közép-Magyarországi Provincii]]
+| [[Keskuzmad'jaranma]]
 | 14507
 |-
 | '''[[Budajorš]]'''
-| [[Közép-Magyarországi Provincii]]
+| [[Keskuzmad'jaranma]]
 | 29605
 |-
 | '''[[Budapešt]]'''
-| '''[[Pälidn]]'''
+| '''[[Pälidn]] [[[Keskuzmad'jaranma]]]'''
 | '''1740041'''
 |-
 | '''[[Bük]]'''
@@ -202,7 +202,7 @@
 | 3493
 |-
 | '''[[Cegled]]'''
-| [[Közép-Magyarországi Provincii]]
+| [[Keskuzmad'jaranma]]
 | 37778
 |-
 | '''[[Cell'dömöl'k]]'''
