*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -194,7 +194,7 @@
 | 29605
 |-
 | '''[[Budapešt]]'''
-| '''[[Pälidn]] [[[Keskuzmad'jaranma]]]'''
+| '''[[Pälidn]] <nowiki>[</nowiki>[[Keskuzmad'jaranma]]<nowiki>]</nowiki>'''
 | '''1740041'''
 |-
 | '''[[Bük]]'''
