*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -14,7 +14,7 @@
 | 3922
 |-
 | '''[[Abauisanto]]'''
-| [[Észak-Magyarorszáági Provincii]]
+| [[Pohjoižmad'jaranma]]
 | 3088
 |-
 | '''[[Abon']]'''
@@ -42,7 +42,7 @@
 | 12410
 |-
 | '''[[Al'šožol'c]]'''
-| [[Észak-Magyarországi Provincii]]
+| [[Pohjoižmad'jaranma]]
 | 5937
 |-
 | '''[[Asod]]'''
@@ -70,7 +70,7 @@
 | 4302
 |-
 | '''[[Balaššad'jarmat]]'''
-| [[Észak-Magyarországi Provincii]]
+| [[Pohjoižmad'jaranma]]
 | 16133
 |-
 | '''[[Balatonal'madi]]'''
@@ -118,7 +118,7 @@
 | 6388
 |-
 | '''[[Baton'teren'je]]'''
-| [[Észak-Magyarországi Provincii]]
+| [[Pohjoižmad'jaranma]]
 | 12604
 |-
 | '''[[Batton'j]]'''
@@ -134,7 +134,7 @@
 | 63752
 |-
 | '''[[Belapatfalv]]'''
-| [[Észak-Magyarországi Provincii]]
+| [[Pohjoižmad'jaranma]]
 | 2996
 |-
 | '''[[Beled]]'''
@@ -178,7 +178,7 @@
 | 13741
 |-
 | '''[[Boršodnadašt]]'''
-| [[Észak-Magyarországi Provincii]]
+| [[Pohjoižmad'jaranma]]
 | 3007
 |-
 | '''[[Budakalas]]'''
@@ -210,7 +210,7 @@
 | 10786
 |-
 | '''[[Cigand]]'''
-| [[Észak-Magyarországi Provincii]]
+| [[Pohjoižmad'jaranma]]
 | 2682
 |-
 | '''[[Čakvar]]'''
