*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -10,7 +10,7 @@
 | 4619
 |-
 | '''[[Abadsalok]]'''
-| [[Észak-Alföldi Provincii]] 
+| [[Pohjoine Al'föl'd]] 
 | 3922
 |-
 | '''[[Abauisanto]]'''
@@ -30,7 +30,7 @@
 | 3912
 |-
 | '''[[Ajäk]]'''
-| [[Észak-Alföldi Provincii]]
+| [[Pohjoine Al'föl'd]]
 | 3528
 |-
 | '''[[Aik]]'''
@@ -66,7 +66,7 @@
 | 37330
 |-
 | '''[[Baktaloranthaz]]'''
-| [[Észak-Alföldi Provincii]]
+| [[Pohjoine Al'föl'd]]
 | 4302
 |-
 | '''[[Balaššad'jarmat]]'''
@@ -102,7 +102,7 @@
 | 4735
 |-
 | '''[[Bal'kan']]'''
-| [[Észak-Alföldi Provincii]]
+| [[Pohjoine Al'föl'd]]
 | 6215
 |-
 | '''[[Bal'mazuivaroš]]'''
@@ -142,7 +142,7 @@
 | 2553
 |-
 | '''[[Berettöuifalu]]'''
-| [[Észak-Alföldi Provincii]]
+| [[Pohjoine Al'föl'd]]
 | 15167
 |-
 | '''[[Berhid]]'''
@@ -150,7 +150,7 @@
 | 5967
 |-
 | '''[[Bešen'söd]]'''
-| [[Észak-Alföldi Provincii]]
+| [[Pohjoine Al'föl'd]]
 | 3372
 |-
 | '''[[Biatorbad']]'''
@@ -162,7 +162,7 @@
 | 11642
 |-
 | '''[[Biharkeresteš]]'''
-| [[Észak-Alföldi Provincii]]
+| [[Pohjoine Al'föl'd]]
 | 3688
 |-
 | '''[[Bodaik]]'''
@@ -222,7 +222,7 @@
 | 2968
 |-
 | '''[[Čenger]]'''
-| [[Észak-Alföldi Provincii]]
+| [[Pohjoine Al'föl'd]]
 | 4730
 |-
 | '''[[Čepreg]]'''
