*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -106,7 +106,7 @@
 | 6215
 |-
 | '''[[Bal'mazuivaroš]]'''
-| [[Észak-Alföldi Provincii]]
+| [[Pohjoine Al'föl'd]]
 | 17354
 |-
 | '''[[Barč (lidn)|Barč]]'''
