*Empty MediaWiki Message*

--- a/Not.mw
+++ b/Not.mw
@@ -1,6 +1,19 @@
 [[Fail:Purse Sein - Ringwade.jpg|thumb|right|250px|Not]]
 '''Not''' om [[Kalanpüdused|kalanpüdusiden]] erik, likui [[kalaverk]].
 
+== Notiden tipiden vepsän nimed ==
+* ''Mutnik'' — pakssil'mäine not maimkalad püdamha.
+* ''Tagas'' — sur' pakssil'mäine not kalan tal'veližen püdandale.
+
+== Tärtused notanke sidotud ==
+* ''Laskän''' — üks' notan laskend vai sen sija, vai satuz sen jäl'ghe.
+* ''Notverk'' — verk, miččespäi not tegese.
+* ''Rindverk, suugpu'' — notan suug.
+* ''Šaid'' — anšpug vedamha notad jän al.
+
+== Kelenvänd ==
+* ''Not  pästta  staučha'' — söda zavottä.
+
 {{stub}}
 
 [[Kategorii:Kalanpüdused]]
