*Empty MediaWiki Message*

--- a/Mad'jaranma.mw
+++ b/Mad'jaranma.mw
@@ -1,18 +1,25 @@
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''Magyarország'''<br />'''Mad'jaranma'''</big></big>
-|-
-| style="background:#efefef;" align="center" colspan=2 |
-{| border="0" cellpadding="2" cellspacing="0"
-|-
-| align="center" width="140px" | [[Fail:Flag of Hungary.svg|border|190px]] Mad'jaranman valdkundflag
-| align="center" width="140px" | [[Fail:Coat of Arms of Hungary.svg|100px]] Mad'jaranman valdkundznam
-|-
-| align="center" width="140px" | 
-| align="center" width="140px" | 
-|}
-|-
-| align=center colspan=2 | [[Fail:EU-Hungary.svg|300px]]
-|}
+{{Valdkund
+| Nimi = <big><big>'''Magyarország'''<br />'''Mad'jaranma'''</big></big>
+| Valdkundznam = Coat of Arms of Hungary.svg
+| Flag = Flag of Hungary.svg
+| Valdkundznam text = Mad'jaranman valdkundznam
+| Flag text = Mad'jaranman valdkundflag
+| Pälidn = [[Budapešt]]
+| Eläjiden lugu = 10.012.000 
+| Voz' = 2011
+| Pind = 93.030
+| Kart = Hungary location map.svg
+| Kel' = [[Mad'jaran kel']]
+| Valdkundan pämez' = [[Áder János]]
+| Päministr = [[Orbán Viktor]]
+| Religii = [[hristanuskond]]
+| Valüt = [[Mad'jaranman forint]]
+| Internet-domen = [[.hu]]
+| Telefonkod = +7
+| Aigvö = [[UTC]]+1
+| Aigvö = [[UTC]]+2
+}}
+
 '''Mad'jaranma''' (vai ''Vengrii'') ([[Mad'jaran kel'|mad'j.]]: ''Magyarország'') om valdkund [[Evrop]]as, [[EÜ]]:n ühtnii. Mad'jaranman [[pälidn]] om [[Budapešt]].
 
 Eläjiden lugu — 10 mln.
