--- a/Mad'jaranma.mw
+++ b/Mad'jaranma.mw
@@ -4,7 +4,7 @@
 | Flag = Flag of Hungary.svg
 | Valdkundznam text = Mad'jaranman valdkundznam
 | Flag text = Mad'jaranman valdkundflag
-| Pälidn = [[Budapešt]]
+| Pälidn = Budapešt
 | Eläjiden lugu = 10.012.000 
 | Voz' = 2011
 | Pind = 93.030
