*Empty MediaWiki Message*

--- a/Mad'jaranma.mw
+++ b/Mad'jaranma.mw
@@ -20,7 +20,7 @@
 | Aigvö = [[UTC]]+2
 }}
 
-'''Mad'jaranma''' (vai ''Vengrii'') ([[Mad'jaran kel'|mad'j.]]: ''Magyarország'') om valdkund [[Evrop]]as, [[EÜ]]:n ühtnii. Mad'jaranman [[pälidn]] om [[Budapešt]].
+'''Mad'jaranma''' (vai ''Vengrii'') ([[Mad'jaran kel'|mad'j.]]: ''Magyarország'') om valdkund [[Evrop]]as, [[EÜ]]:n ühtnii. Mad'jaranman [[pälidn]] da kaikiš suremb lidn om [[Budapešt]].
 
 Eläjiden lugu — 10 mln.
 
