--- a/Mad'jaranma.mw
+++ b/Mad'jaranma.mw
@@ -31,6 +31,7 @@ Pind — 93 030 km<sup>2</sup>.
 == Politine sistem ==
 
 == Geografijan andmused ==
+Balaton om kaikiš suremb reskvezijärv Keskuzevropas.
 
 == Eläjad ==
 
