--- a/Mad'jaranma.mw
+++ b/Mad'jaranma.mw
@@ -30,6 +30,19 @@ Pind — 93 030 km<sup>2</sup>.
 
 == Politine sistem ==
 
+== Administrativine jagand==
+Mad'jaranmas om 7 randad, 19 agj da 346 [[Mad'jaranman lidnad|lidnad]].
+
+Mad'jaranmas om 7 randad:
+
+* [[Keskuzdunajantagaine rand]] 
+* [[Keskuzmad'jaranma]]
+* [[Päivlaskmdunajantagaine rand]]
+* [[Pohjoine Al'föl'd]]
+* [[Pohjoižmad'jaranma]]
+* [[Suvi Al'föl'd]]
+* [[Suvidunajantagaine rand]]
+
 == Geografijan andmused ==
 Balaton om kaikiš suremb reskvezijärv Keskuzevropas.
 
