--- a/Mad'jaranma.mw
+++ b/Mad'jaranma.mw
@@ -30,17 +30,16 @@ Pind — 93 030 km<sup>2</sup>.
 
 == Politine sistem ==
 
-== Administrativine jagand==
-Mad'jaranmas om 7 randad, 19 agj da 346 [[Mad'jaranman lidnad|lidnad]].
+=== Administrativine jagand ===
+Mad'jaranmas om [[Mad'jaranman lidnad|346 lidnad]], kudambad mülüdas 19 agjoihe ([[med'je]]d), a ned — 7 regionoihe.
 
-Mad'jaranmas om 7 randad:
-
+Regionad:
 * [[Keskuzdunajantagaine rand]] 
 * [[Keskuzmad'jaranma]]
 * [[Päivlaskmdunajantagaine rand]]
 * [[Pohjoine Al'föl'd]]
 * [[Pohjoižmad'jaranma]]
-* [[Suvi Al'föl'd]]
+* [[Suvial'föl'd]]
 * [[Suvidunajantagaine rand]]
 
 == Geografijan andmused ==
