*Empty MediaWiki Message*

--- a/Mad'jaranma.mw
+++ b/Mad'jaranma.mw
@@ -20,7 +20,7 @@
 | Aigvö = [[UTC]]+2
 }}
 
-'''Mad'jaranma''' (vai ''Vengrii'') ([[Mad'jaran kel'|mad'j.]]: ''Magyarország'') om valdkund [[Evrop]]as, [[EÜ]]:n ühtnii. Mad'jaranman [[pälidn]] da kaikiš suremb lidn om [[Budapešt]].
+'''Mad'jaranma''' ([[Mad'jaran kel'|mad'j.]]: ''Magyarország'') om valdkund [[Evrop]]as, [[EÜ]]:n ühtnii. Mad'jaranman [[pälidn]] da kaikiš suremb lidn om [[Budapešt]].
 
 Eläjiden lugu — 10 mln.
 
@@ -29,6 +29,9 @@ Pind — 93 030 km<sup>2</sup>.
 == Istorii ==
 
 == Politine sistem ==
+
+== Geografijan andmused ==
+Balaton om kaikiš suremb reskvezijärv Keskuzevropas.
 
 === Administrativine jagand ===
 Mad'jaranmas om [[Mad'jaranman lidnad|346 lidnad]], kudambad mülüdas 19 agjoihe ([[med'je]]d), a ned — 7 regionoihe.
@@ -42,15 +45,11 @@ Regionad:
 * [[Suvial'föl'd]]
 * [[Suvidunajantagaine rand]]
 
-== Geografijan andmused ==
-Balaton om kaikiš suremb reskvezijärv Keskuzevropas.
-
 == Eläjad ==
 
 == Ižanduz ==
 
-{{Evropa}}
-
+{{Evrop}}
 {{stub}}
 
-[[Kategorii:Mad'jaranma]]
+[[Kategorii:Mad'jaranma|*]]
