--- a/Mad'jaranma.mw
+++ b/Mad'jaranma.mw
@@ -1,25 +1,23 @@
 {{Valdkund
-| Nimi = <big><big>'''Magyarország'''<br />'''Mad'jaranma'''</big></big>
+| Nimi = Mad'jaranma<br />Magyarország
 | Valdkundznam = Coat of Arms of Hungary.svg
 | Flag = Flag of Hungary.svg
 | Valdkundznam text = Mad'jaranman valdkundznam
-| Flag text = Mad'jaranman valdkundflag
+| Flag text = Mad'jaranman flag
 | Pälidn = Budapešt
-| Eläjiden lugu = 10.012.000 
+| Eläjiden lugu = 10,012,000
 | Voz' = 2011
-| Pind = 93.030
-| Kart = Hungary location map.svg
-| Kel' = [[Mad'jaran kel']]
-| Valdkundan pämez' = [[Áder János]]
-| Päministr = [[Orbán Viktor]]
+| Pind = 93,030
+| Kart = EU-Hungary.svg
+| Kel' = [[Mad'jaran kel'|mad'jaran]]
+| Valdkundan pämez' = [[Ader Janoš|Janoš Ader]]
+| Päministr = [[Orban Viktor|Viktor Orban]]
 | Religii = [[hristanuskond]]
-| Valüt = [[Mad'jaranman forint]]
+| Valüt = [[mad'jaranman forint]]
 | Internet-domen = [[.hu]]
 | Telefonkod = +36
-| Aigvö = [[UTC]]+1
 | Aigvö = [[UTC]]+2
 }}
-
 '''Mad'jaranma''' ([[Mad'jaran kel'|mad'j.]]: ''Magyarország'') om valdkund [[Evrop]]as, [[EÜ]]:n ühtnii. Mad'jaranman [[pälidn]] da kaikiš suremb lidn om [[Budapešt]].
 
 Eläjiden lugu — 10 mln.
