it doesn't works but anyway... is there another variant of the arms? more convenient for our template :-)

--- a/Mad'jaranma.mw
+++ b/Mad'jaranma.mw
@@ -1,6 +1,6 @@
 {{Valdkund
 | Nimi = Mad'jaranma<br />Magyarország
-| Valdkundznam = Coat of Arms of Hungary.svg
+| Valdkundznam = Coat of Arms of Hungary.svg{{!}}80px
 | Flag = Flag of Hungary.svg
 | Valdkundznam text = Mad'jaranman valdkundznam
 | Flag text = Mad'jaranman flag
