*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -3,247 +3,434 @@
 |-
 ! '''Lidnas nimi'''
 ! '''Provincii'''
+! '''Agjoihe'''
 ! '''Eläjiden lugu'''
 |-
 | '''[[Ab (lidn, Mad'jaranma)|Ab]]'''
 | [[Keskuzdunajantagaine rand]]
+| [[Fejer]]
 | 4619
 |-
 | '''[[Abadsalok]]'''
 | [[Pohjoine Al'föl'd]] 
+| [[Jas-Nad'jkun-Solnok]]
 | 3922
 |-
 | '''[[Abauisanto]]'''
 | [[Pohjoižmad'jaranma]]
+| [[Borsod-Abauj-Zemplen]]
 | 3088
 |-
 | '''[[Abon']]'''
 | [[Keskuzmad'jaranma]]
+| [[Pešt]]
 | 14876
 |-
 | '''[[Ač (lidn)|Ač]]'''
 | [[Keskuzdunajantagaine rand]]
+| [[Komarom-Estergom]]
 | 6965
+
 |-
 | '''[[Adon']]'''
 | [[Keskuzdunajantagaine rand]]
+| [[Fejer]]
 | 3912
 |-
 | '''[[Ajäk]]'''
 | [[Pohjoine Al'föl'd]]
+| [[Sabolč-Satmar-Bereg]]
 | 3528
 |-
 | '''[[Aik]]'''
 | [[Keskuzdunajantagaine rand]]
+| [[Vesprem]]
 | 29058
 |-
 | '''[[Al'bertirš]]'''
 | [[Keskuzmad'jaranma]]
+| [[Pešt]]
 | 12410
 |-
 | '''[[Al'šožol'c]]'''
 | [[Pohjoižmad'jaranma]]
+| [[Boršod-Abauj-Zemplen]]
 | 5937
 |-
 | '''[[Asod]]'''
 | [[Keskuzmad'jaranma]]
+| [[Pešt]]
 | 6414
 |-
 | '''[[Babol'n]]'''
 | [[Keskuzdunajantagaine rand]]
+| [[Komarom-Estergom]]
 | 3654
 |-
 | '''[[Bačal'maš]]'''
-| [[Suvidunajantagaine rand]]
+| [[Suvilal'föl'd rand]]
+| [[Bač-Kiškun]]
 | 6697
 |-
 | '''[[Badačon'tomai]]'''
 | [[Keskuzdunajantagaine rand]]
+| [[Vesprem]]
 | 2080
 |-
 | '''[[Bai]]'''
-| [[Suvidunajantagaine rand]]
+| [[Suvial'föl'd rand]]
+| [[Bač-Kiškun]]
 | 37330
 |-
 | '''[[Baktaloranthaz]]'''
 | [[Pohjoine Al'föl'd]]
+| [[Sabolč-Satmar-Bereg]]
 | 4302
 |-
 | '''[[Balaššad'jarmat]]'''
 | [[Pohjoižmad'jaranma]]
+| [[Nograd]]
 | 16133
 |-
 | '''[[Balatonal'madi]]'''
 | [[Keskuzdunajantagaine rand]]
+| [[Vesprem]]
 | 9167
 |-
 | '''[[Balatonboglar]]'''
 | [[Suvidunajantagaine rand]]
+| [[Šomod']]
 | 5932
 |-
 | '''[[Balatonfel'dvar]]'''
 | [[Suvidunajantagaine rand]]
+| [[Šomod']]
 | 2064
 |-
 | '''[[Balatonfüred]]'''
 | [[Keskuzdunajantagaine rand]]
+| [[Vesprem]]
 | 13532
 |-
 | '''[[Balatonfüzfö]]'''
 | [[Keskuzdunajantagaine rand]]
+| [[Vesprem]]
 | 4299
 |-
 | '''[[Balatonkeneše]]'''
 | [[Keskuzdunajantagaine rand]]
+| [[Vesprem]]
 | 3195
 |-
 | '''[[Balatonlelle]]'''
 | [[Suvidunajantagaine rand]]
+| [[Šomod']]
 | 4735
 |-
 | '''[[Bal'kan']]'''
 | [[Pohjoine Al'föl'd]]
+| [[Sabolč-Satmar-Bereg]]
 | 6215
 |-
 | '''[[Bal'mazuivaroš]]'''
 | [[Pohjoine Al'föl'd]]
+| [[Hajdú-Bihar]]
 | 17354
 |-
 | '''[[Barč (lidn)|Barč]]'''
 | [[Suvidunajantagaine rand]]
+| [[Baran'ja]]
 | 11378
 |-
 | '''[[Batasek]]'''
 | [[Suvidunajantagaine rand]]
+| [[Tolna]]
 | 6388
 |-
 | '''[[Baton'teren'je]]'''
 | [[Pohjoižmad'jaranma]]
+| [[Nograd]]
 | 12604
 |-
 | '''[[Batton'j]]'''
-| [[Suvidunajantagaine rand]]
+| [[Suvial'föl'd rand]]
+| [[Bekeš]]
 | 5565
 |-
 | '''[[Bekeš (lidn)|Bekeš]]'''
-| [[Suvidunajantagaine rand]]
+| [[Suvial'föl'd rand]]
+| [[Bekeš]]
 | 19763
 |-
 | '''[[Bekeš'čab]]'''
-| [[Suvidunajantagaine rand]]
+| [[Suvial'föl'd rand]]
+| [[Bekeš]]
 | 63752
 |-
 | '''[[Belapatfalv]]'''
 | [[Pohjoižmad'jaranma]]
+| [[[Heveš]]
 | 2996
 |-
 | '''[[Beled]]'''
 | [[Päivlaskmdunajantagaine rand]]
+| [[D'jor-Mošon-Šopron]]
 | 2553
 |-
 | '''[[Berettöuifalu]]'''
 | [[Pohjoine Al'föl'd]]
+| [[Hajdu-Bihar]]
 | 15167
 |-
 | '''[[Berhid]]'''
 | [[Keskuzdunajantagaine rand]]
+| [[Vesprem]]
 | 5967
 |-
 | '''[[Bešen'söd]]'''
 | [[Pohjoine Al'föl'd]]
+| [[Jas-Nad'jkun-Solnok]]
 | 3372
 |-
 | '''[[Biatorbad']]'''
 | [[Keskuzmad'jaranma]]
+| [[Pešt]]
 | 12805
 |-
 | '''[[Bičke]]'''
 | [[Keskuzdunajantagaine rand]]
+| [[Fejer]]
 | 11642
 |-
 | '''[[Biharkeresteš]]'''
 | [[Pohjoine Al'föl'd]]
+| [[Hajdu-Bihar]]
 | 3688
 |-
 | '''[[Bodaik]]'''
 | [[Keskuzdunajantagaine rand]]
+| [[Fejer]]
 | 4051
 |-
 | '''[[Boi (lidn, Mad'jaranma)|Boi]]'''
 | [[Suvidunajantagaine rand]]
+| [[Baran'j]]
 | 3996
 |-
 | '''[[Bon'had]]'''
 | [[Suvidunajantagaine rand]]
+| [[Tolna]]
 | 13741
 |-
 | '''[[Boršodnadašt]]'''
 | [[Pohjoižmad'jaranma]]
+| [[Boršod-Abauj-Zemplen]]
 | 3007
 |-
 | '''[[Budakalas]]'''
 | [[Keskuzmad'jaranma]]
+| [[Pešt]]
 | 10510
 |-
 | '''[[Budakesi]]'''
 | [[Keskuzmad'jaranma]]
+| [[Pešt]]
 | 14507
 |-
 | '''[[Budajorš]]'''
 | [[Keskuzmad'jaranma]]
+| [[Pešt]]
 | 29605
 |-
 | '''[[Budapešt]]'''
 | '''[[Pälidn]] <nowiki>[</nowiki>[[Keskuzmad'jaranma]]<nowiki>]</nowiki>'''
+| [[Pešt]]
 | '''1740041'''
 |-
 | '''[[Bük]]'''
 | [[Päivlaskmdunajantagaine rand]]
+| [[Vaš]]
 | 3493
 |-
 | '''[[Cegled]]'''
 | [[Keskuzmad'jaranma]]
+| [[Pešt]]
 | 37778
 |-
 | '''[[Cell'dömöl'k]]'''
 | [[Keskuzdunajantagaine rand]]
+| [[Vesprem]]
 | 10786
 |-
 | '''[[Cigand]]'''
 | [[Pohjoižmad'jaranma]]
+| [[Boršod-Abauj-Zemplen]]
 | 2682
 |-
 | '''[[Čakvar]]'''
 | [[Keskuzdunajantagaine rand]]
+| [[Fejer]]
 | 5221
 |-
 | '''[[Čanadpalot]]'''
-| [[Suvidunajantagaine rand]]
+| [[Suvial'föl'd rand]]
+| [[Čongrad]]
 | 2968
 |-
 | '''[[Čenger]]'''
 | [[Pohjoine Al'föl'd]]
+| [[Sabolč-Satmar-Bereg]]
 | 4730
 |-
 | '''[[Čepreg]]'''
 | [[Päivlaskmdunajantagaine rand]]
+| [[Vaš]]
 | 3384
 |-
 | '''[[Čongrad (lidn)|Čongrad]]'''
-| [[Suvidunajantagaine rand]]
+| [[Suvial'föl'd rand]]
+| [[Čongrad (agjoihe)|Čongrad]]
 | 16846
 |-
 | '''[[Čorn]]'''
 | [[Päivlaskmdunajantagaine rand]]
+| [[D'jor-Mošon-Šopron]]
 | 10649
 |-
 | '''[[Čorvaš]]'''
 | [[Suvidunajantagaine rand]]
+| [[Bekeš]]
 | 4981
 |-
 | '''[[Čurgo]]'''
 | [[Suvidunajantagaine rand]]
+| [[Šomod']]
 | 5186
+|-
+| '''[[Dabaš]]'''
+| [[Keskuzmad'jaranma]]
+| [[Pešt]]
+| 16813
+|-
+| '''[[Debrecen]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Hajdu-Bihar]]
+| 207594
+|-
+| '''[[Demečer]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Sabolč-Satmar-Bereg]]
+| 4280
+|-
+| '''[[Derečke]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Hajdu-Bihar]]
+| 8906
+|-
+| '''[[Devavan'ja]]'''
+| [[Suvial'föl'd rand]]
+| [[Bekeš]]
+| 7622
+|-
+| '''[[Devečer]]'''
+| [[Keskuzdunajantagaine rand]]
+| [[Vesprem]]
+| 4325
+|-
+| '''[[Diošd]]'''
+| [[Keskuzmad'jaranma]]
+| [[Pešt]]
+| 9522
+|-
+| '''[[Dombovar]]'''
+| [[Suvidunajantagaine rand]]
+| [[Tolna]]
+| 19494
+|-
+| '''[[Dorog]]'''
+| [[Keskuzdunajantagaine rand]]
+| [[Komarom-Estergom]]
+| 11996
+|-
+| '''[[Dunajfel'dvar]]'''
+| [[Suvidunajantagaine rand]]
+| [[Tolna]]
+| 8666
+|-
+| '''[[Dunajharasti]]'''
+| [[Keskuzmad'jaranma]]
+| [[Pešt]]
+| 20260
+|-
+| '''[[Dunajkeši]]
+| [[Keskuzmad'jaranma]]
+| [[Pešt]]
+| 40334
+|-
+| '''[[Dunajujvaroš]]'''
+| [[Keskuzdunajantagaine rand]]
+| [[Fejer]]
+| 48010
+|-
+| '''[[Dunajvaršan'j]]'''
+| [[Keskuzmad'jaranma]]
+| [[Pešt]]
+| 7480
+|-
+| '''[[Dunajveče]]'''
+| [[Suvial'föl'd rand]]
+| [[Bač-Kiskun]]
+| 3937
+|-
+| '''[[Edelen'j]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Boršod-Abauj-Zemplen]]
+| 10019
+|-
+| '''[[Eger]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Heveš]]
+| 56166
+|-
+| '''[[Elek]]'''
+| [[Suvial'föl'd rand]]
+| [[Bekeš]]
+| 4816
+|-
+| '''[[Emod]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Boršod-Abauj-Zemplen]]
+| 4895
+|-
+| '''[[Enč]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Boršod-Abauj-Zemplen]]
+| 6201
+|-
+| '''[[En'jing]]'''
+| [[Keskuzdunajantagaine rand]]
+| [[Fejer]]
+| 6768
+|-
+| '''[[Erči]]'''
+| [[Keskuzdunajantagaine rand]]
+| [[Fejer]]
+| 7999
+|-
+| '''[[Erd]]'''
+| [[Keskuzmad'jaranma]]
+| [[Pešt]]
+| 65277
+|-
+| '''[[Estergom]]'''
+| [[Keskuzdunajantagaine rand]]
+| [[Komarom-Estergom]]
+| 30434
+|-
+| '''[[Fed'jvernek]]'''
+| [[Pohjoine Al'föl'd]] 
+| [[Jas-Nad'jkun-Solnok]]
+| 6415
 |}
 
 [[Kategorii:Madjaranman lidnad|!]]
