*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -68,7 +68,7 @@
 | 3654
 |-
 | '''[[Bačal'maš]]'''
-| [[Suvilal'föl'd rand]]
+| [[Suvilal'föl'd]]
 | [[Bač-Kiškun]]
 | 6697
 |-
@@ -78,7 +78,7 @@
 | 2080
 |-
 | '''[[Bai]]'''
-| [[Suvial'föl'd rand]]
+| [[Suvial'föl'd]]
 | [[Bač-Kiškun]]
 | 37330
 |-
@@ -153,17 +153,17 @@
 | 12604
 |-
 | '''[[Batton'j]]'''
-| [[Suvial'föl'd rand]]
+| [[Suvial'föl'd]]
 | [[Bekeš]]
 | 5565
 |-
 | '''[[Bekeš (lidn)|Bekeš]]'''
-| [[Suvial'föl'd rand]]
+| [[Suvial'föl'd]]
 | [[Bekeš]]
 | 19763
 |-
 | '''[[Bekeš'čab]]'''
-| [[Suvial'föl'd rand]]
+| [[Suvial'föl'd]]
 | [[Bekeš]]
 | 63752
 |-
@@ -273,7 +273,7 @@
 | 5221
 |-
 | '''[[Čanadpalot]]'''
-| [[Suvial'föl'd rand]]
+| [[Suvial'föl'd]]
 | [[Čongrad]]
 | 2968
 |-
@@ -288,7 +288,7 @@
 | 3384
 |-
 | '''[[Čongrad (lidn)|Čongrad]]'''
-| [[Suvial'föl'd rand]]
+| [[Suvial'föl'd]]
 | [[Čongrad (agjoihe)|Čongrad]]
 | 16846
 |-
@@ -328,7 +328,7 @@
 | 8906
 |-
 | '''[[Devavan'ja]]'''
-| [[Suvial'föl'd rand]]
+| [[Suvial'föl'd]]
 | [[Bekeš]]
 | 7622
 |-
@@ -378,7 +378,7 @@
 | 7480
 |-
 | '''[[Dunajveče]]'''
-| [[Suvial'föl'd rand]]
+| [[Suvial'föl'd]]
 | [[Bač-Kiskun]]
 | 3937
 |-
@@ -393,7 +393,7 @@
 | 56166
 |-
 | '''[[Elek]]'''
-| [[Suvial'föl'd rand]]
+| [[Suvial'föl'd]]
 | [[Bekeš]]
 | 4816
 |-
