'agjoihe' -> '(in)to counties'

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -3,7 +3,7 @@
 |-
 ! '''Lidnas nimi'''
 ! '''Provincii'''
-! '''Agjoihe'''
+! '''Agj'''
 ! '''Eläjiden lugu'''
 |-
 | '''[[Ab (lidn, Mad'jaranma)|Ab]]'''
