--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -431,6 +431,116 @@
 | [[Pohjoine Al'föl'd]] 
 | [[Jas-Nad'jkun-Solnok]]
 | 6415
+|-
+| '''[[Feherd'jarmat]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Sabolč-Satmar-Bereg]]
+| 7861
+|-
+| '''[[Fel'šožol'c]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Boršod-Abauj-Zemplen]]
+| 6750
+|-
+| '''[[Fertod]]'''
+| [[Päivlaskmdunajantagaine rand]]
+| [[D'jor-Mošon-Šopron]]
+| 3461
+|-
+| '''[[Fertosentmikoš]]'''
+| [[Päivlaskmdunajantagaine rand]]
+| [[D'jor-Mošon-Šopron]]
+| 3891
+|-
+| '''[[Fon'jod]]'''
+| [[Suvidunajantagaine rand]]
+| [[Šomod']]
+| 4728
+|-
+| '''[[Fot]]'''
+| [[Keskuzmad'jaranma]]
+| [[Pešt]]
+| 18968
+|-
+| '''[[Fuzešabon'j]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Heveš]]
+| 7781
+|-
+| '''[[Fuzešd'jarmat]]'''
+| [[Suvial'föl'd rand]]
+| [[Bekeš]]
+| 5665
+|-
+| '''[[Gardon']]'''
+| [[Keskuzdunajantagaine rand]]
+| [[Fejer]]
+| 9927
+|-
+| '''[[God]]'''
+| [[Keskuzmad'jaranma]]
+| [[Pešt]]
+| 18565
+|-
+| '''[[Godollo]]'''
+| [[Keskuzmad'jaranma]]
+| [[Pešt]]
+| 34172
+|-
+| '''[[Gonc]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Boršod-Abauj-Zemplen]]
+| 1951
+|-
+| '''[[D'jal]]'''
+| [[Keskuzmad'jaranma]]
+| [[Pešt]]
+| 23486
+|-
+| '''[[D'jomaendrod]]
+| [[Suvial'föl'd rand]]
+| [[Bekeš]]
+| 13674
+|-
+| '''[[D'jomro]]'''
+| [[Keskuzmad'jaranma]]
+| [[Pešt]]
+| 16670
+|-
+| '''[[D'jond'jos]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Heveš]]
+| 32385
+|-
+| '''[[D'jond'jospata]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Heveš]]
+| 2472
+|-
+| '''[[D'jonk]]'''
+| [[Suvidunajantagaine rand]]
+| [[Tolna]]
+| 2066
+|-
+| '''[[D'jor]]'''
+| [[Päivlaskmdunajantagaine rand]]
+| [[D'jor-Mošon-Šopron]]
+| 131564
+|-
+| '''[[D'jula]]'''
+| [[Suvial'föl'd rand]]
+| [[Bekeš]]
+| 31679
+|-
+| '''[[Hajdubosormen'j]]
+| [[Pohjoine Al'föl'd]]
+| [[Hajdu-Bihar]]
+| 31306
+|-
+| '''[[Hajdudorog]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Hajdu-Bihar]]
+| 8888
 |}
 
 [[Kategorii:Madjaranman lidnad|!]]
