*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -327,7 +327,7 @@
 | [[Hajdu-Bihar]]
 | 8906
 |-
-| '''[[Devavan'ja]]'''
+| '''[[Devavan'j]]'''
 | [[Suvial'föl'd]]
 | [[Bekeš]]
 | 7622
@@ -347,47 +347,52 @@
 | [[Tolna]]
 | 19494
 |-
+| '''[[Dombrad]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Sabol'č Satmar Bereg]]
+| 19494
+|-
 | '''[[Dorog]]'''
 | [[Keskuzdunajantagaine rand]]
 | [[Komarom-Estergom]]
 | 11996
 |-
-| '''[[Dunajfel'dvar]]'''
+| '''[[Dunafül'dvar]]'''
 | [[Suvidunajantagaine rand]]
 | [[Tolna]]
 | 8666
 |-
-| '''[[Dunajharasti]]'''
+| '''[[Dunaharasti]]'''
 | [[Keskuzmad'jaranma]]
 | [[Pešt]]
 | 20260
 |-
-| '''[[Dunajkeši]]
+| '''[[Dunakesi]]
 | [[Keskuzmad'jaranma]]
 | [[Pešt]]
 | 40334
 |-
-| '''[[Dunajujvaroš]]'''
+| '''[[Dunauivaroš]]'''
 | [[Keskuzdunajantagaine rand]]
 | [[Fejer]]
 | 48010
 |-
-| '''[[Dunajvaršan'j]]'''
+| '''[[Dunavaršan']]'''
 | [[Keskuzmad'jaranma]]
 | [[Pešt]]
 | 7480
 |-
-| '''[[Dunajveče]]'''
+| '''[[Dunaveče]]'''
 | [[Suvial'föl'd]]
 | [[Bač-Kiskun]]
 | 3937
 |-
-| '''[[Edelen'j]]'''
+| '''[[Edelen']]'''
 | [[Pohjoižmad'jaranma]]
 | [[Boršod-Abauj-Zemplen]]
 | 10019
 |-
-| '''[[Eger]]'''
+| '''[[Eger (lidn)|Eger]]'''
 | [[Pohjoižmad'jaranma]]
 | [[Heveš]]
 | 56166
@@ -397,7 +402,7 @@
 | [[Bekeš]]
 | 4816
 |-
-| '''[[Emod]]'''
+| '''[[Emöd]]'''
 | [[Pohjoižmad'jaranma]]
 | [[Boršod-Abauj-Zemplen]]
 | 4895
@@ -417,7 +422,7 @@
 | [[Fejer]]
 | 7999
 |-
-| '''[[Erd]]'''
+| '''[[Erd (lidn)|Erd]]'''
 | [[Keskuzmad'jaranma]]
 | [[Pešt]]
 | 65277
@@ -427,7 +432,7 @@
 | [[Komarom-Estergom]]
 | 30434
 |-
-| '''[[Fed'jvernek]]'''
+| '''[[Fed'vernek]]'''
 | [[Pohjoine Al'föl'd]] 
 | [[Jas-Nad'jkun-Solnok]]
 | 6415
